tests/paczka1/fuzzy1/46833817.err
Error in line 4: ad1YGj4oQ A681 -1,3
Error in line 2: ad1YGj4oQ A681 74,6
Error in line 8: ad1YGj4oQ S36 65,9
Error in line 13: ad1YGj4oQ A681 95,5
Error in line 14: ad1YGj4oQ S932 3,7
Error in line 25: 0vwKg5 A278 12,1
